Fixes to the Turntable page.

--- a/kenwood_kd500.html
+++ b/kenwood_kd500.html
@@ -60,7 +60,7 @@
   <div class="hp-info-box">
     <h2>My Kenwood KD-500 Turntable</h2>
     <p style="color: #2a2117; text-align: left; width: 100%;"> <!-- Removed max-width: 700px; -->
-      My personal Kenwood KD-500, is a cornerstone of my vinyl setup. I acquired it from a very kind gentleman right here in the Seattle area. It came equipped with the highly regarded, low-mass ADC LMF-2 tonearm, a perfect match for high-compliance cartridges. Currently, it sings with a Stanton 681EEE-S stylus, known for its warm, smooth, and detailed sound signature – just excellent for any music genre.
+      My personal Kenwood KD-500, is the cornerstone of my vinyl setup. I acquired it from a very kind gentleman right here in the Seattle area. It came equipped with the highly regarded, low-mass ADC LMF-2 tonearm, a perfect match for high-compliance cartridges. Currently, it sings with a Stanton 681EEE-S stylus, known for its warm, smooth, and detailed sound signature – just excellent for any music genre.
       <br><br>
       What makes this particular KD-500 unique is its stunning finish. The previous owner had a background in automotive paint and body work, and he applied his skills beautifully, giving it a deep, glossy black lacquer finish that looks absolutely factory-perfect. It's a testament to both Kenwood's original engineering and the care of its previous owner.
       <!-- Placeholder for image if needed later -->
@@ -69,9 +69,8 @@
   </div>
 
   <!-- Cartridge Compatibility Table -->
-  <div class="hp-info-box"> <!-- Changed class from card to hp-info-box -->
-    <h2>Cartridge Compatibility Guide (LMF-2 Tonearm)</h2>
-    <table style="color: #2a2117;">
+  <div class="table-scroll"> <!-- Responsive scrollable wrapper with padding -->
+    <table style="color: #2a2117; width: 100%; min-width: 0;"> <!-- Set min-width larger than box -->
       <thead>
         <tr>
           <th>Cartridge</th>
