Index.html updates

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+git push -u origin main<!DOCTYPE html>
 <html>
 <head><title>Audiophile Playbook</title>
   <link rel="stylesheet" href="style.css">
